--- a/ran.html
+++ b/ran.html
@@ -95,6 +95,8 @@
     <h1>OUR ROOMS</h1>
   </div>
 
+ 
+
   <div class="m">
 
     <div class="ms ms1">
@@ -105,6 +107,20 @@
     </div>
     <div class="ms ms3">
       <p>fjbvxxtyi</p>
+    </div>
+  </div>
+
+  <div class="card text-center">
+    <div class="card-header">
+      Featured
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Special title treatment</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+    <div class="card-footer text-body-secondary">
+      2 days ago
     </div>
   </div>
 
