--- a/ran.html
+++ b/ran.html
@@ -89,9 +89,21 @@
     </button>
   </div>
 
+  <div class="container text-center">
+    <div class="row justify-content-center">
+      <div class="col-4">
+        One of two columns
+      </div>
+      <div class="col-4">
+        One of two columns
+      </div>
+    </div>
+  </div>
+
+
   
 
-  <div class="rooms">
+  <div class="our-rooms">
     <h1>OUR ROOMS</h1>
   </div>
 
@@ -107,6 +119,20 @@
     </div>
     <div class="ms ms3">
       <p>fjbvxxtyi</p>
+    </div>
+  </div>
+
+  <div class="container text-center">
+    <div class="row  justify-content-evenly room">
+      <div class="col-4 ms1 room-pic">
+        One of three columns
+      </div>
+      <div class="col-4 ms2 room-pic">
+        One of three columns
+      </div>
+      <div class="col-4 ms3 room-pic">
+        One of three columns
+      </div>
     </div>
   </div>
 
