added card slider

--- a/ran.html
+++ b/ran.html
@@ -11,7 +11,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=Cinzel&display=swap"
     rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="owl-carousal.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/freeps2/a7rarpress@main/swiper-bundle.min.css">
   <title>Hotel Room Book</title>
 </head>
 
@@ -19,7 +22,8 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top mask-custom shadow-0">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -32,18 +36,23 @@
       </div>
     </div>
   </nav>
- 
+
 
   <div id="carouselExampleCaptions" class="carousel slide">
     <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        
-        <img src="https://images.pexels.com/photos/863802/pexels-photo-863802.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="d-block w-100" alt="...">
+
+        <img
+          src="https://images.pexels.com/photos/863802/pexels-photo-863802.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <div class="buttons">
             <button class="book_button">
@@ -55,7 +64,9 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="https://images.pexels.com/photos/1287460/pexels-photo-1287460.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="d-block w-100" alt="...">
+        <img
+          src="https://images.pexels.com/photos/1287460/pexels-photo-1287460.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <div class="buttons">
             <button class="book_button">
@@ -67,7 +78,9 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="https://images.pexels.com/photos/261102/pexels-photo-261102.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="d-block w-100" alt="...">
+        <img
+          src="https://images.pexels.com/photos/261102/pexels-photo-261102.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <div class="buttons">
             <button class="book_button">
@@ -101,13 +114,13 @@
   </div>
 
 
-  
+
 
   <div class="our-rooms">
     <h1>OUR ROOMS</h1>
   </div>
 
- 
+
 
   <div class="m">
 
@@ -136,7 +149,162 @@
     </div>
   </div>
 
-  <div class="card text-center">
+  <div class="slide-container swiper">
+    <div class="slide-content">
+      <div class="card-wrapper swiper-wrapper">
+        <div class="card swiper-slide">
+          <div class="image-content ">
+            <span class="overlay o1"></span>
+
+
+          </div>
+
+          <div class="card-content">
+            <h2 class="name">Mohamed Yousef
+            </h2>
+            <p class="description">The lorem text the section that contains header with having open
+              functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+            <button class="button">View More</button>
+          </div>
+        </div>
+        <div class="card swiper-slide">
+          <div class="image-content ">
+            <span class="overlay o2"></span>
+
+
+          </div>
+
+          <div class="card-content">
+            <h2 class="name">Mohamed Yousef
+            </h2>
+            <p class="description">The lorem text the section that contains header with having open
+              functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+            <button class="button">View More</button>
+          </div>
+        </div>
+        <div class="card swiper-slide">
+          <div class="image-content ">
+            <span class="overlay o3"></span>
+
+
+          </div>
+
+          <div class="card-content">
+            <h2 class="name">Mohamed Yousef
+            </h2>
+            <p class="description">The lorem text the section that contains header with having open
+              functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+            <button class="button">View More</button>
+          </div>
+        </div>
+        <div class="card swiper-slide">
+          <div class="image-content ">
+            <span class="overlay o4"></span>
+
+
+          </div>
+
+          <div class="card-content">
+            <h2 class="name">Mohamed Yousef
+            </h2>
+            <p class="description">The lorem text the section that contains header with having open
+              functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+            <button class="button">View More</button>
+          </div>
+        </div>
+        <div class="card swiper-slide">
+          <div class="image-content">
+            <span class="overlay o5"></span>
+
+
+          </div>
+
+          <div class="card-content">
+            <h2 class="name">Mohamed Yousef
+            </h2>
+            <p class="description">The lorem text the section that contains header with having open
+              functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+            <button class="button">View More</button>
+          </div>
+        </div>
+        <div class="card swiper-slide">
+          <div class="image-content">
+            <span class="overlay o6"></span>
+
+
+          </div>
+
+          <div class="card-content">
+            <h2 class="name">Mohamed Yousef
+            </h2>
+            <p class="description">The lorem text the section that contains header with having open
+              functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+            <button class="button">View More</button>
+          </div>
+        </div>
+        <div class="card swiper-slide">
+          <div class="image-content">
+            <span class="overlay o7"></span>
+
+
+          </div>
+
+          <div class="card-content">
+            <h2 class="name">Mohamed Yousef
+            </h2>
+            <p class="description">The lorem text the section that contains header with having open
+              functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+            <button class="button">View More</button>
+          </div>
+        </div>
+        <div class="card swiper-slide">
+          <div class="image-content">
+            <span class="overlay o8"></span>
+
+
+          </div>
+
+          <div class="card-content">
+            <h2 class="name">Mohamed Yousef
+            </h2>
+            <p class="description">The lorem text the section that contains header with having open
+              functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+            <button class="button">View More</button>
+          </div>
+        </div>
+        <div class="card swiper-slide">
+          <div class="image-content">
+            <span class="overlay o9"></span>
+
+
+          </div>
+
+          <div class="card-content">
+            <h2 class="name">Mohamed Yousef
+            </h2>
+            <p class="description">The lorem text the section that contains header with having open
+              functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+            <button class="button">View More</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="swiper-button-next swiper-navBtn"></div>
+    <div class="swiper-button-prev swiper-navBtn"></div>
+    <div class="swiper-pagination"></div>
+  </div>
+
+  <!-- <div class="card text-center">
     <div class="card-header">
       Featured
     </div>
@@ -148,7 +316,7 @@
     <div class="card-footer text-body-secondary">
       2 days ago
     </div>
-  </div>
+  </div> -->
 
   <div class="rooms">
     <h1>SERVICES</h1>
@@ -259,9 +427,23 @@
   </footer>
 
   <script src="scriptran.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
+
+  <!-- Swiper JS -->
+  <script src="//cdn.jsdelivr.net/gh/freeps2/a7rarpress@main/swiper-bundle.min.js"></script>
+
+  <!-- JavaScript -->
+  <!--Uncomment this line-->
+  <script src="//cdn.jsdelivr.net/gh/freeps2/a7rarpress@main/script.js"></script>
+  <script src="owl-carousal.js"></script>
 </body>
 
 </html>
