--- a/ran.html
+++ b/ran.html
@@ -69,13 +69,9 @@
           src="https://images.pexels.com/photos/1287460/pexels-photo-1287460.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
           class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <div class="buttons">
-            <button class="book_button">
-              <i> BOOK NOW</i>
-            </button>
-          </div>
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
+          
+          <h5>ENJOY YOUR WONDERFUL HOLIDAYS WITH A GREAT LUXURY EXPERIENCE!</h5>
+          <p>Most Relaxing Place</p>
         </div>
       </div>
       <div class="carousel-item">
@@ -83,13 +79,9 @@
           src="https://images.pexels.com/photos/261102/pexels-photo-261102.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
           class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <div class="buttons">
-            <button class="book_button">
-              <i> BOOK NOW</i>
-            </button>
-          </div>
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+          
+          <h5>ENJOY YOUR WONDERFUL HOLIDAYS WITH A GREAT LUXURY EXPERIENCE!</h5>
+          <p>Most Relaxing Place</p>
         </div>
       </div>
     </div>
